[package]
name = "gabira"
version = "0.1.1"
authors = ["ersenal <ali@ersenal.com>"]
repository = "https://github.com/ersenal/gabira.git"
homepage = "https://github.com/ersenal/gabira.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/gabira"
description = "HTTP integration tests made easy."

[dependencies]
futures = "0.1.23"
tokio = "0.1.7"
actix-web = "0.7.3"
serde = "1.0.70"
serde_json = "1.0.24"
serde_urlencoded = "0.5.2"

[dev-dependencies]
serde_derive = "1.0.70"
